# project1-ap-IE

./: .gitignore  README.md  USER.py  USER1.py  api-handler.py  api-handler.py.py  api.py  api.py.py  api_handler.py  appointment.py  cli.py  clinic.py  config.py  functions.py  main.py  main.sqlite3  manager.py  patient.py  pyproject.toml  readme.md  requirements.txt  run.bat  setup.bat  user.py
classes/: __init__.py  appointment.py  base.py  clinic.py  manager.py  patient.py  user.py
main/: api.py  api_handler.py  cli.py  config.py  main.py
